--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
   ],
   "author": "Diego Vergara <davc93@gmail.com>",
   "license": "MIT",
-  "bin":{
-    "random-msg" : "./bin/global.js"
+  "bin": {
+    "random-msg": "bin/global.js"
   },
-  "preferGlobal": true
+  "preferGlobal": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/davc93/npm.git"
+  },
+  "bugs": {
+    "url": "https://github.com/davc93/npm/issues"
+  },
+  "homepage": "https://github.com/davc93/npm#readme"
 }
